Adding all the files

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Fullscreen background video -->
     <video class="background-video" autoplay loop muted>
-        <source src="avtar_video.webm" type="video/webm">
+        <source src="static/avtar_video.webm" type="video/webm">
         Your browser does not support the video tag.
     </video>
 
@@ -28,7 +28,7 @@
         <div class="chat-area">
             <div class="chat-header">
                 <div class="user-info">
-                    <img src="avatar.jpg" alt="Profile" class="profile-pic">
+                    <img src="static/avatar.jpg" alt="Profile" class="profile-pic">
                     <span>Welcome back, Satwik!</span>
                 </div>           
             </div>
