--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -50,13 +50,13 @@
                     <!-- <h1>Welcome Back!</h1>
                     <p>To keep connected with us please login with your personal info</p> -->
                     <video class="login-video" autoplay unmuted >
-                        <source src="Untitled Video (2).webm" type="video/webm">
+                        <source src="static/Untitled Video (2).webm" type="video/webm">
                     </video>
                     <button class="ghost" id="signIn">Sign In</button>
                 </div>
                 <div class="overlay-panel overlay-right">
                     <video class="login-video" autoplay  unmuted >
-                        <source src="Untitled Video (2).webm" type="video/webm">
+                        <source src="static/Untitled Video (2).webm" type="video/webm">
                     </video>
                     <button class="ghost" id="signUp">Sign Up</button>
                 </div>
