--- a/FrontEnd/signup.html
+++ b/FrontEnd/signup.html
@@ -73,7 +73,7 @@
         <!-- Video Section -->
         <div class="video-box">
             <video autoplay unmuted loop controls >
-                <source src= "Untitled Video (2).webm" type="video/webm">
+                <source src= "static/Untitled Video (2).webm" type="video/webm">
                 Your browser does not support the video tag.
             </video>
         </div>
